# minecraft--

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh
.cache/clangd/index/: Block.hpp.C8DFBE415973CAFB.idx  Camera.hpp.EB9D67477636F650.idx  Chunk.hpp.F1F3C7473C2C0E38.idx  ChunkMesher.cpp.74D732CB633D7101.idx  ChunkMesher.hpp.EA7D6B08475D247C.idx  Renderer.cpp.2722D5C2B369B921.idx  Renderer.hpp.E90BD72040DDAE99.idx  Vertex.hpp.AD9555C80E34378F.idx  World.hpp.1CC5B89DB8659BB5.idx  main.cpp.1FDE5AA2CB2A5DEC.idx
shaders/: square.frag  square.vert
src/: main.cpp
src/Camera/: Camera.hpp
src/Core/: Logger.hpp
src/Network/: Messages.hpp  ThreadSafeQueue.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Server/: ServerWorld.cpp  ServerWorld.hpp
src/World/: Block.hpp  Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  Vertex.hpp  World.hpp
